fix: crowding doesn't cause later departures to wrap

--- a/assets/css/departure_destination.scss
+++ b/assets/css/departure_destination.scss
@@ -9,6 +9,6 @@
 }
 
 .departure-destination--small {
-  width: 646px;
+  width: 491px;
   font-size: 54px;
 }
